Opened 11 years ago

Closed 10 years ago

#11091 closed bug (fixed)

Missing features in Tracker virtual directories

Reported by: ttcoder Owned by: jscipione
Priority: normal Milestone: R1/beta1
Component: Kits/libtracker.so Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by bonefish)

Steps:

  • open e.g. Haiku-menu > Applications
  • in the virtual folder that opens, select an app, e.g. ActivityMonitor, and..
  • right-drag it to the desktop to symlink it, or right-click it and select AddOns > Open-target-folder etc.: nothing happens at all (not even getting an error message).

Change History (8)

comment:1 by waddlesplash, 11 years ago

Milestone: R1R1/alpha5

comment:2 by bonefish, 11 years ago

Component: Applications/TrackerKits/libtracker.so
Owner: changed from axeld to nobody

This is actually unrelated to shine-through directories. It's just a missing feature of Tracker's virtual directory feature. I implemented only the minimum functionality needed for the Haiku menu.

Cf. the TODO in the code. It might at the first glance look easier to solve than it is. The problem is that what looks like directory entries are actually temporary virtual directory files, which would have to be resolved somehow (to the top-most of the merged directories?).

I thought that there are tickets for the shortcomings of the current implementation, but I can't find them ATM.

comment:3 by bonefish, 10 years ago

Description: modified (diff)
Summary: Shine-through PM folders won't symlink ..etcMissing features in Tracker virtual directories

comment:4 by pulkomandy, 10 years ago

Milestone: R1/alpha5R1/beta1

comment:5 by jscipione, 10 years ago

Fixed the copying part of this bug in hrev48838

comment:6 by jscipione, 10 years ago

Owner: changed from nobody to jscipione
Status: newassigned

comment:7 by jscipione, 10 years ago

Fixed the remaining Open Target Folder part in hrev48858. Also went a step further and selected the result afterwords.

comment:8 by jscipione, 10 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev48858

Note: See TracTickets for help on using tickets.