Tracker: handle copying files from virtual directories

If virtual directory first resolve the symlink before copying/moving/linking the file.

Fixes #11091

R1/B1 bug squashed!